@startuml
	Title <size:20>\nPattern: Specification\n


	class Item {
		- price
		+ __construct()
		+ getPrice()
	}

	interface Specification {
		+ isSatisfiedBy(Item)
	}

	class AndSpecification implements Specification {
		- $specifications
		+ __construct(Specification ...$specifications)
		+ isSatisfiedBy(Item)
	}

	class OrSpecification implements Specification {
		- $specifications
		+ __construct(Specification ...$specifications)
		+ isSatisfiedBy(Item)
	}

	class NorSpecification implements Specification {
		- $specifications
		+ __construct(Specification ...$specifications)
		+ isSatisfiedBy(Item)
	}

	class PriceSpecification implements Specification {
		- $maxPrice
		- $minPrice
		+ __construct()
		+ isSatisfiedBy(Item)
	}

	Specification --> AndSpecification: " injects"
	Specification --> OrSpecification: " injects"
	Specification --> NorSpecification: " injects"
@enduml